# RCH-playground

./: .github-setup.md  .gitignore  ALL_FIXES_COMPLETE.md  API-KEYS-LOCATION.md  CODE_DUPLICATION_ANALYSIS.md  Executive-Summary-API-Validation.md  FAIR_COST_GAP_IMPLEMENTATION.md  FINAL_PUSH_INSTRUCTIONS.md  FREE_REPORT_COMPLIANCE_ANALYSIS.md  FREE_REPORT_DATA_AVAILABILITY_ANALYSIS.md  FREE_REPORT_ENDPOINT_IMPLEMENTATION.md  FREE_REPORT_PRODUCTION_READINESS_ANALYSIS.md  FREE_REPORT_VIEWER_SETUP.md  FSA_INTEGRATION_COMPLETE.md  Firecrawl-Search-Возможности.md  Firecrawl-Search-Тестовые-Запросы.md  GITHUB_DESKTOP_INSTRUCTIONS.md  GITHUB_PUSH_STATUS.md  GITHUB_READY.md  IMPLEMENTATION_CHECK.md  INTERFACE_EXPLANATION.md  INTERFACE_STRUCTURE.md  LOCAL_TESTING_GUIDE.md  MISSING_IMPLEMENTATIONS.md  MSIF_INTEGRATION.md  PRE_COMMIT_CHECKLIST.md  PRODUCTION_READINESS_REVIEW.md  PRODUCTION_READINESS_SUMMARY.md  PROFESSIONAL_DYNAMIC_WEIGHTS_IMPLEMENTATION_SUMMARY.md  PROFESSIONAL_QUESTIONNAIRES_VALIDATION_REPORT.md  PROFESSIONAL_REPORT_IMPLEMENTATION_PLAN.md  PROFESSIONAL_REPORT_MISSING_SECTIONS.md  PROFESSIONAL_SCORING_DYNAMIC_WEIGHTS_ANALYSIS.md  PUSH_INSTRUCTIONS.md  PUSH_NOW.md  README.md  README_PUSH.md  SECURITY_KEYS_REPORT.md  TASK_COMPLETE.md  TROUBLESHOOTING_BROWSER_EXTENSION_ERRORS.md  (+17 more)
RCH-data/: .gitignore  COMMIT_PLAN.md  README.md  pyproject.toml  run_pricing_api.sh
RCH-data/input/: CLAUDE_AI_TASK_PROMPT.md  MAPPING_COMPARISON_REPORT.md  MAPPING_FIXES_PRACTICAL_STEPS.md  MAPPING_SCRIPTS_COMPARISON_REPORT.md  Product_Manager_Guide_CQC.md  README-AUTUMNA-PARSING-AND-MAPPING.md  README-CQC-MAPPING.md  care_homes_db_v2_2.sql  care_homes_rows_after_mapping_REPORT.md  cqc-to-care_homes_grok.sql  mapping_improved_script.sql  unused_fields_analysis.md  Опросники.md
RCH-data/input/autumna/: ACTION_CHECKLIST.md  API_CONFIG.md  AUTUMNA_PARSING_PROMPT_REVIEW_v2.4.md  AUTUMNA_PARSING_PROMPT_v2_5_OPTIMIZED.md  AUTUMNA_PARSING_PROMPT_v2_6_OPTIMIZED_NON_CQC.md  AUTUMNA_PARSING_PROMPT_v3_1_OPTIMIZED_NON_CQC.md  AUTUMNA_SCRAPING_METHODOLOGY_PM.md  CHUNKING_AND_FORMAT_ANALYSIS.md  DETAILED_JSON_COMPARISON.md  FIELD_COVERAGE_ANALYSIS.md  HTML_VS_MARKDOWN_COMPARISON.md  LLM_EXPERT_VALIDATION_TASK.md  LLM_EXPERT_VALIDATION_TASK_RU.md  MARKDOWN_MIGRATION_GUIDE.md  OPTIMIZATION_RESULTS.md  PARSING_PROCESS_DESCRIPTION.md  PARSING_RESULTS_REPORT.md  PROMPT_OPTIMIZATION_ANALYSIS.md  STAGING_ARCHITECTURE_v2.4.md  TEST_FILE_ANALYSIS.md  TEST_PARSING_REPORT.md  V25_VS_V26_COMPARISON_REPORT.md  autumna_html_prompt_v26.md  autumna_markdown_prompt_v26.md  checklist_ System Prompt.md  final_assessment_v26.md  improvement_recommendations.md  response_format_v26_final.json  response_format_v2_4.json  response_format_v3_1_optimized_non_cqc.json  validation_report.md
RCH-data/input/other/: HELP_AND_GUIDE_SECTION.md  msif_processing_summary.md
RCH-data/reference/: 02_cursor_task.md  CARE_HOMES_SPECIFICATION.md  MAPPING_CHECKLIST.md
src/: msif_loader.py  (+1 more)
(+995 files in other folders)
